tests/fixtures/invalid/pow_str_str_bool.py
# Cannot call pow() with Str, Str, Bool
x = pow("hello", "hello", True)
